[tool.poetry]
name = "simple-rag"
version = "0.1.0"
description = "A simple Local Rag"
authors = ["surfiniaburger <jdmasciano2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
